# serdash

./: .env.example  LICENSE  README.md  docker-compose.yml
agent/: README.md  pyproject.toml
agent/install/: install-launchd.sh  install-systemd.sh
agent/install/launchd/: com.serdash.agent.plist
agent/install/systemd/: serdash-agent.service
agent/serdash_agent/: __init__.py  auth.py  cli.py  collector.py  publisher.py
collector/: Dockerfile  Gemfile  app.rb
dashboard/: Gemfile
dashboard/app/assets/stylesheets/: application.css
dashboard/app/controllers/: application_controller.rb  discovery_controller.rb  home_controller.rb  servers_controller.rb  sessions_controller.rb
dashboard/app/models/: connection_sample.rb  cpu_sample.rb  disk_sample.rb  listening_port_sample.rb  memory_sample.rb  network_device.rb  network_interface_sample.rb  registration_code.rb  server.rb  user.rb
dashboard/app/views/discovery/: index.html.erb
dashboard/app/views/home/: index.html.erb
dashboard/config/: application.rb  credentials.yml.enc  database.yml  master.key  routes.rb
dashboard/config/environments/: production.rb
dashboard/config/initializers/: omniauth.rb
dashboard/db/: schema.rb  seeds.rb
dashboard/db/migrate/: 20260211032433_create_users.rb  20260211032434_create_servers.rb  20260211032435_create_network_devices.rb  20260211032436_create_registration_codes.rb  20260211032437_create_metric_tables.rb
dashboard/lib/serdash/: backfill.rb
dashboard/lib/tasks/: backfill.rake
nginx/: nginx.conf
test-server/: Dockerfile  entrypoint.sh
(+1743 files in other folders)
